# de-zoomcamp-project

./: .gitignore  README.md  docker-reddit.yaml  prefect-docker-deployment.yaml  pyproject.toml  test.csv
.github/workflows/: comments_daily_scraper.yml  create_plots.yml  daily_scraper.yml  get_comments_and_update_in_bq.yml  get_posts_and_update_in_bq.yml  posts_daily_scraper.yml  run_dbt.yml  run_tests.yml
data/ghost_stories/: comments_ghosts_stories.parquet  posts_ghosts_stories.parquet  word_counter_body.csv  word_counter_post_text.csv  word_counter_post_title.csv
dbt_reddit/: .user.yml  dbt_project.yml  profiles.yml
dbt_reddit/macros/: extract_hour.sql  normalize_timestamp.sql
dbt_reddit/models/prod/: prod_comments_ghosts.sql  prod_posts_ghosts.sql  prod_tables_joined.sql  sources.yml
flows/: create_plots.py  reddit_comments_scraper.py  reddit_posts_scraper.py  update_comments_in_bq.py  update_posts_in_bq.py
flows/gc_funcs/: reader_writer.py
src/: create_plots.py  main.py  reddit_comments_scraper.py  reddit_deployment.sh  reddit_posts_scraper.py  reddit_scraper.py  update_bq.py
src/flows/: create_plots.py  reddit_comments_scraper.py  reddit_posts_scraper.py  update_bq.py  update_comments_in_bq.py  update_posts_in_bq.py
src/flows/gc_funcs/: reader_writer.py
src/gc_funcs/: reader_writer.py
terraform/: .terraform.lock.hcl  locals.tf  main.tf  variables.tf
tests/: conftest.py  test_posts_and_comments.py  test_reader.py
