[tool.poetry]
name = "de-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Arturomtz8 <arturo.mtz8@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyarrow = "10.0.1"
pandas = "1.5.2"
prefect = "2.7.7"
prefect-gcp = {version = "0.2.4", extras = ["cloud_storage"]}
protobuf = "4.21.11"
greenlet = "^2.0.1"
praw = "7.7.0"
certifi = "2022.12.07"
pandas-gbq = "^0.19.1"
nltk = "^3.8.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
wordcloud = "^1.8.2"
gcsfs = "^2023.3.0"
dbt-bigquery = "^1.4.3"
shandy-sqlfmt = "^0.17.0"
ruff = "^0.0.263"



[tool.poetry.dev-dependencies]
pytest = "7.2.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]

target-version = "py39"

select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "N",   # naming
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "S",   # flake8-bandit
  "A",   # flake8-builtins
  "C90", # mccabe
  "TRY", # tryceratops - clean try and except
  "PL",  # Pylint
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
]
exclude = [ 
  "D"  # pydocstyle
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["E", "D", "N", "F", "I"]

[tool.ruff.mccabe]
max-complexity = 7